--- a/iConcept Live/HomeViewController.xib
+++ b/iConcept Live/HomeViewController.xib
@@ -99,7 +99,7 @@
 					<object class="IBUIButton" id="264109450">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{41, 259}, {103, 63}}</string>
+						<string key="NSFrame">{{40, 259}, {105, 63}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="573070289"/>
@@ -110,7 +110,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<reference key="IBUIFont" ref="1063366282"/>
 						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">TBD</string>
+						<string key="IBUINormalTitle">Latest Deal</string>
 						<reference key="IBUIHighlightedTitleColor" ref="506351072"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
