--- a/iConcept Live/HomeViewController.xib
+++ b/iConcept Live/HomeViewController.xib
@@ -127,6 +127,7 @@
 						<string key="NSFrame">{{191, 259}, {96, 64}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:222</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
